# webathon-ballmers-valley

./: .gitignore  Cargo.toml  README.md  db.sh  example.db  schema.sql
.sqlx/: query-2bbfd1fd17426938dbb9767ded5696d03fd25f9acdf61c14402b4dc94edc8339.json  query-2d0250331f1ac93293489ed424f4909f7c739cb5be2ee85c54e8e73439c4a727.json  query-391f34fc9d748d93d92f7882f5b8dfeeef1ccce06cb6f23e22199857e00b77df.json  query-437c75b731dfa911851160e958cbd2be71c1cfbaebc00fffce8e16a906ae404e.json  query-4408da920b02bd21135fe4ecdc9a6e0dff5ed70ff3ebdb329a98cbf23355f22a.json  query-8fbececfbca4b2ff50e6d5dce5f6966abcfee5cae56926aedc1a25e4f4e9a8b6.json  query-99f1f453d77568d9b0167c7969d44859736734367a17420db66df6f61c10fb4b.json  query-b2ac3b7287503c88b860e1b5b73bc3ff7b4759f293140a01bf8c5e5acda81a5a.json  query-cf21bb47fdcc7ba3b61aa0caa7bd93e8690e1b04c9b86828a90407212f30f5de.json  query-d451677e5cc9630b52c4d68c1da4c0720b798ad9652972ce89cdcc9840c59e96.json  query-dcac8d3b7f48cebf041b4586a2a339845911d9aec7db13504d6b0fbebc45d00c.json  query-ec66d7773fde2883effad3b18a9fa7dc7f547f8563cce0536f00989bf13dfe14.json
backend/: Cargo.toml
backend/src/: jwt.rs  main.rs
frontend/src/: index.html
frontend/static/: assignments.html  data.json  group-cs.html  group-math.html  group.html  index.html  login.html  register.html  schema  style.css  tasks.html  utils.js
